--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -20,6 +20,12 @@ load("@io_bazel_rules_rust//:workspace.bzl", "rust_workspace")
 
 rust_workspace()
 
+http_archive(
+    name = "rules_cc",
+    strip_prefix = "rule_cc-b1c40e1de81913a3c40e5948f78719c28152486d",
+    url = "https://github.com/bazelbuild/rules_cc/archive/b1c40e1de81913a3c40e5948f78719c28152486d.zip",
+)
+
 load("//third_party/cargo:crates.bzl", "raze_fetch_remote_crates")
 
 raze_fetch_remote_crates()
